Correct grammar (spelling), refactor Chance field execution logic, correct method and var naming